client/src/css/CourseSelectTable.css
/*
TODO------
-make placeholder diasappear on focus

*/
/* GLOBAL PROPERTIES:
- card
- a
- card-header
- card-title
- card-text  */

input[type=number]::-webkit-outer-spin-button,
input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=number] {
    -moz-appearance:textfield;
}

.courseTable {
	max-height: 70vh !important;
	min-height: 18vh;
	overflow: auto;
	border-radius: 0 0 0.7rem 0.7rem;
	background-color: var(--select-table-background-color);
	font-family: 'Montserrat', sans-serif;
	cursor: default;
	scrollbar-width: none;
}

.courseTable::-webkit-scrollbar {
	width: 0 !important;
}

.card {
	border: none !important;
}

.card-header {
	border: none !important;
}

.courseList {
	column-count: 1;
}

.cardOne {
	border-radius: 0.7rem !important;
	background-color: var(--brand-color) !important;
}

.cardOneHeader {
	border-radius: 0.7rem 0.7rem 0 0 !important;
	background-color: var(--brand-color);
	color: var(--text-color-default);
	padding: 1.25rem 1rem 0 1rem !important;
}

.courses {
	padding: 1rem 1rem 0 1rem;
}

.courseCard {
	border-radius: 0.7rem;
	-webkit-box-shadow: 1px 1px 9px -1px var(--dropshadow-default);
	-moz-box-shadow: 1px 1px 9px -1px var(--dropshadow-default);
	box-shadow: 1px 1px 9px -1px var(--dropshadow-default);
	transition: box-shadow 0.17s ease-in-out;
	transition: background-color 0.1s ease-in-out;
	cursor: pointer;
	color: var(--text-color-inverted);
	background-color: var(--card-background-color);
}

.courseCard.active {
	-webkit-box-shadow: 1px 1px 9px -1px var(--dropshadow-highlight);
	-moz-box-shadow: 1px 1px 9px -1px var(--dropshadow-highlight);
	box-shadow: 1px 1px 9px -1px var(--dropshadow-highlight);
	background-color: var(--card-highlight-color);
	cursor: default;
}

@media only screen and (min-width: 768px) {
	.courseCard:hover {
		-webkit-box-shadow: 1px 1px 9px -1px var(--dropshadow-highlight);
		-moz-box-shadow: 1px 1px 9px -1px var(--dropshadow-highlight);
		box-shadow: 1px 1px 9px -1px var(--dropshadow-highlight);
		background-color: var(--card-highlight-color);
		transition: box-shadow 0.17s ease-in-out;
		transition: background-color 0.1s ease-in-out;
	}
}

.card-title {
	font-size: 1.05em;
	font-weight: bold;
	margin: 0 !important;
}

.card-text {
	margin: 0 !important;
}

.cardOneHeader > .courseTitle {
	font-size: 1.3em !important;
	font-weight: bold !important;
	margin: 0 !important;
}

.cardOneHeader > .courseCodeText {
	margin: 0 !important;
}

.cardOneHeader > .courseCredits {
	margin: 0 !important;
}

.courseSelectDetails {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	font-size: 0.9rem;
}

.courseCredits, .courseTypes, .courseCodeText {
	flex-grow: 1;
}

.courseCredits {
	text-align: right;
}

.courseTypes {
	text-align: center;
}

.cardCompletedSubtitle {
	margin-top: 0 !important;
	color: var(--card-selected-text-color);
}

.courseSelectContainer {
	margin-top: 4rem !important;
	margin-bottom: 2rem !important;
}

.searchBarContainer {
	padding: 0 !important;
}

.searchBar {
	background-color: var(--brand-color) !important;
	color: var(--text-color-default) !important;
	font-family: 'Montserrat', sans-serif;
	border: none;
	box-shadow: none !important;
	padding: 0 !important;
	height: 1.1em !important;
	font-weight: bold;
	font-size: 1.3em;
	text-align: left;
	text-transform: uppercase;
	width: 100%;
}

.searchBarContainer input:focus {
	width: 15rem;
}

.searchBarContainer ::placeholder {
	color: var(--text-color-default) !important;
	opacity: 1;
	transition: opacity 0.17s ease;
	text-transform: capitalize;
}

.searchBarContainer [placeholder]:focus::-webkit-input-placeholder {
	transition: opacity 0.17s ease;
	opacity: 0;
}

.searchBarContainer [placeholder]:focus::-moz-placeholder {
	transition: opacity 0.17s ease;
	opacity: 0;
}

.searchColumn {
	display: flex;
	min-height: 1.75rem;
}

.searchIcon {
	margin-top: 0.2rem;
	margin-right: 0.5rem;
}

.codeText {
	font-family: 'Montserrat', sans-serif;
	font-weight: bold;
	font-size: 1.3em;
	margin-top: -0.22rem;

	pointer-events: none;
	position: absolute;
	left: 8.5rem;
	z-index: 1;
}

.codeText:after {
	animation: changeWord 6s linear infinite alternate;
	content: 'Slot';
}

.searchColumn:focus-within .codeText {
	display: none;
}

.toggleCustom {
	background: var(--select-table-background-color) !important;
	border: none !important;
	color: var(--text-color-inverted) !important;
	transition: margin 0.17s ease-in-out;
	transition: padding 0.17s ease-in-out;
	transition: background-color 0.17s ease-in;
	cursor: pointer;
}

.toggleCustom.focus {
	box-shadow: none !important;
}

.toggleCustom.hover {
	border: none !important;
	background-color: var(--select-table-background-color) !important;
	transition: background-color 0.17s ease-in;
}

.toggleCustom.active {
	border: none !important;
	background-color: var(--button-highlight-color) !important;
	color: var(--text-color-default) !important;
	transition: background-color 0.17s ease-in;
}

.creditField {
	background-color: var(--brand-color) !important;
	color: var(--text-color-default) !important;
	font-family: 'Montserrat', sans-serif;
	border: none;
	border-bottom: 2px solid var(--text-color-default);
	box-shadow: none !important;
	padding: 0 !important;
	height: 1.3em !important;
	font-weight: bold;
	font-size: 1.3em;
	text-align: center;
	text-transform: uppercase;
	width: 100% !important;
}

.creditField:focus {
	border: none;
	border-bottom: 2px solid var(--text-color-default);
}

.creditLabel {
	color: var(--text-color-default) !important;
	font-family: 'Montserrat', sans-serif;

	font-weight: bold;
	font-size: 1.3em;
}


@keyframes changeWord {
	0% {
		content: 'Slot';
		color: var(--text-color-default);
	}
	12.5% {
		color: var(--brand-color);
	}
	25% {
		content: 'Title';
		color: var(--text-color-default);
	}
	37.5% {
		color: var(--brand-color);
	}
	50% {
		content: 'Code';
		color: var(--text-color-default);
	}
	62.5% {
		color: var(--brand-color);
	}
	75% {
		content: 'Title';
		color: var(--text-color-default);
	}
	87.5% {
		color: var(--brand-color);
	}
	100% {
		content: 'Slot';
		color: var(--text-color-default);
	}
}

.courseTypeFilter {
	margin: 0 !important;
	margin-right: auto !important;
	text-align: center !important;
}

.filterButton {
	font-family: 'Montserrat', sans-serif;
	background-color: var(--brand-color) !important;
	margin-right: 0.5rem !important;
	border: none !important;
	background-color: var(--select-table-background-color);
	color: var(--text-color-default);
	transition: color 0.17s ease-in;
}

.filterButton:hover {
	color: var(--button-highlight-color);
	transition: color 0.17s ease-in;
}

.filterButton.active {
	background-color: var(--select-table-background-color) !important;
	color: var(--text-color-inverted) !important;
	transition: background-color 0.17s ease-in;
}

.filterButton.focus {
	background-color: var(--select-table-background-color) !important;
	color: var(--text-color-inverted) !important;
	transition: background-color 0.17s ease-in;
}

@media only screen and (min-width: 420px) {
	.curriculumDropdown {
		width: 70%;
	}
}

@media only screen and (max-width: 1250px) {
	.filterButton {
		padding: 0.5rem 0.5rem;
	}
}

@media only screen and (min-width: 768px) {
	.slotSelectionRow .col-md-4 {
		flex: 0 0 40%;
		max-width: 40%;
	}

	.slotSelectionRow .col-md-8 {
		flex: 0 0 60%;
		max-width: 60%;
	}

	.codeText {
		position: absolute;
		left: 8.5rem;
	}
}

@media only screen and (min-width: 1070px) {
	.slotSelectionRow .col-md-4 {
		flex: 0 0 33.333333%;
		max-width: 33.333333%;
	}

	.slotSelectionRow .col-md-8 {
		flex: 0 0 66.666667%;
		max-width: 66.666667%;
	}

	.codeText {
		position: absolute;
		left: 9.5rem;
	}
}

@media only screen and (min-width: 768px) and (max-width: 860px) {
	.courseTypeFilter {
		font-size: 0.8em;
	}
	.courseTypeFilter .filterButton {
		padding: 0.3rem 0.3rem;
	}

	.codeText {
		position: absolute;
		left: 8.5rem;
	}
}

